# Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2

*gdisk-0.5.0 (02 Nov 2009)

  02 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +gdisk-0.5.0.ebuild:
  initial funtoo ebuild.


