@@ -1,4 +1,6 @@
 DIST gdisk-0.5.0.tgz 72092 RMD160 40fa5a7ce1102bbcf195b53ce4b43d1430802538 SHA1 c69a66b0be842a2f53cea035e4c66894b0c5abb8 SHA256 8a253c2360a84e9467867747c327247c29858c16614a5ce6d094cdf194e69a55
+DIST gdisk-0.6.8.tgz 129051 RMD160 9d4b3aec3b5d83b8410526e744f58c6511b51d74 SHA1 ad6cf6d17d9e5c7c72497de8b3803cb3ef8bb61d SHA256 f1672ca7b421fb847c0fdb0d97bef6dc8cdf7a2824b613ea7073db92a54e235f
 EBUILD gdisk-0.5.0.ebuild 425 RMD160 c45dc81864557f6090a4b4cea5f0668c0ad929ec SHA1 cfbc8e1f75d29b4e0c838f8301d3aee8e38b42ef SHA256 d3eab2a9cd938d6141e7af736c208800fc57459dcfd798836f53a4194aee7879
-MISC ChangeLog 207 RMD160 934b0eefc26ceef5cdc24187a68170be320d0fd2 SHA1 51d13bcb68da9e12eb8ce6887ea813cbd4f8ad33 SHA256 dcf2041eb05ec2131e5bc455cb1180ef350cef22c7336e46aa05e0f9debfc0e1
+EBUILD gdisk-0.6.8.ebuild 603 RMD160 f6023f6642b7f87ef59f718baec5870fa8ee611b SHA1 b83b8b606939fcab236c8e562773e2be67e98c0b SHA256 6c354d681c802dc3c35919312a1def85b11f8f25d145ec43c601350ef78f4e89
+MISC ChangeLog 399 RMD160 584ff17977b4b448f450654a8285dd543ee1c1a6 SHA1 4b8ce65c928b50d87e12b73054c94dca202e7a70 SHA256 06fd436ef33c96356d952da50c67665fc72ce279ef808a0408443a006678885f
 MISC metadata.xml 466 RMD160 6ce383e4bb4872672643e3e93da52e2e165bbb5e SHA1 39701a9b9bcf24494343d26b1c641a219cff3173 SHA256 3130d49e487258ba6095d13b72bd8eae2f0e9598d19525cf0614fbbf69cb485b
