@@ -1,5 +1,11 @@
 # Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2
 
+*gdisk-0.6.8 (30 Jun 2010)
+
+  30 Jun 2010; Daniel Robbins <drobbins@funtoo.org> +gdisk-0.6.8.ebuild:
+  merged in robbat2's gdisk ebuild improvements from gentoo (minus
+  unnecessary eutils.)
+
 *gdisk-0.5.0 (02 Nov 2009)
 
   02 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +gdisk-0.5.0.ebuild:
